--- a/intro.tex
+++ b/intro.tex
@@ -60,8 +60,7 @@ and a paragraph from \textcite[\S 7]{itip-statinf}.
 Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf}.
 %which was written primarily by Gero Walter.****
 
-Section~\ref{sec:alternatives} uses parts of \textcite[\S 4.4]{itip-statinf}.***
-
+Section~\ref{sec:alternatives} was devised for this thesis, using some very minor parts of \textcite[\SS 4.2, 4.4]{itip-statinf}.***
 
 Section~\ref{sec:jstp} is a slightly abriged reproduction of \textcite{Walter2009a},
 with a minor change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
